2003-08-29  Douglas Bates  <bates@stat.wisc.edu>

	* tests/lme.Rout.save (Coefficients): Now consistent with
	i386-linux result.

	* src/base.h: Replace R_ext/Mathlib.h by Rmath.h

2003-08-09  Douglas Bates  <bates@stat.wisc.edu>

	* man/Covariate.varFunc.Rd, man/Matrix.pdMat.Rd, man/Matrix.reStruct.Rd, man/Names.pdMat.Rd, man/Names.reStruct.Rd, man/coef.corStruct.Rd, man/coef.modelStruct.Rd, man/coef.pdMat.Rd, man/coef.reStruct.Rd, man/coef.varFunc.Rd, man/getData.lmList.Rd, man/gnls.Rd:
	Use \method for replacement method documentation as per Rd changes

	* R/lme.R:
	Changed check for intercept-like column in getFixDF (PR#2418)

2003-06-12  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION: New release

	* man/ranef.lmList.Rd, man/nlme.Rd: Overdocumented arguments

2003-06-10  Douglas Bates  <bates@stat.wisc.edu>

	* man/MathAchSchool.Rd, man/MathAchieve.Rd, ChangeLog, DESCRIPTION, R/groupedData.R, inst/scripts/ch03.R, inst/scripts/ch04.R:
	Release 3.1-42

	* inst/scripts/ch01.R: Protecting power in formula

2003-06-10  Douglas Bates  <bates@stat.wisc.edu>

	* R/groupedData.R: Fixed bug in groupedData constructor when outer
	is not missing.

2003-05-16  Douglas Bates  <bates@stat.wisc.edu>

	* src/nlmefit.c (internal_EM): Fix by Peter Dalgaard for compound
	symmetry EM calculations (PR#2985)

2003-05-05  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmList.R (update.lmList): Changed this and several other
	update methods.

	* R/groupedData.R: Use eval instead of do.call (Dieter Menne)

2003-04-17  Douglas Bates  <bates@stat.wisc.edu>

	* NAMESPACE: contributed by Brian Ripley
	
	* man/print.corStruct.Rd: Removed this and many other redundant
	documentation files for S3 methods.

	* R/<many files> Remove redundant GPL notices.

2003-03-25  Douglas Bates  <bates@stat.wisc.edu>

	* R/nlme.R (nonlinModel): Moved definition from AAA.R to here

	* man/summary.nlsList.Rd: Remove references to summary.nls

	* R/newMethods.R: Remove vestigial definitions of AIC.lm
