@@ -1,6 +1,6 @@
 Package: nlme
-Version: 3.1-45
-Date: 2003/08/29
+Version: 3.1-48
+Date: 2004/01/14
 Priority: recommended
 Title: Linear and nonlinear mixed effects models
 Author: Jose Pinheiro <Jose.Pinheiro@pharma.novartis.com>,
@@ -9,5 +9,6 @@ Author: Jose Pinheiro <Jose.Pinheiro@pharma.novartis.com>,
         Deepayan Sarkar <deepayan@stat.wisc.edu> 
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Fit and compare Gaussian linear and nonlinear mixed-effects models.
-Depends: nls, lattice, R(>= 1.7.0)
+Depends: graphics, stats, lattice, R(>= 1.9.0)
 License: GPL version 2 or later
+Packaged: Wed Jan 14 15:02:11 2004; bates
