@@ -1,306 +1,0 @@
-ACF                     Autocorrelation Function
-ACF.gls                 Autocorrelation Function for gls Residuals
-ACF.lme                 Autocorrelation Function for lme Residuals
-Alfalfa                 Split-Plot Experiment on Varieties of Alfalfa
-Assay                   Bioassay on Cell Culture Plate
-BIC                     Bayesian Information Criterion
-BIC.logLik              BIC of a logLik Object
-BodyWeight              Rat weight over time for different diets
-Cefamandole             Pharmacokinetics of Cefamandole
-Coef                    Assign Values to Coefficients
-Covariate               Assign Covariate Values
-Covariate.varFunc       Assign varFunc Covariate
-Dialyzer                High-Flux Hemodialyzer
-Dim                     Extract Dimensions from an Object
-Dim.corSpatial          Dimensions of a corSpatial Object
-Dim.corStruct           Dimensions of a corStruct Object
-Dim.pdMat               Dimensions of a pdMat Object
-Earthquake              Earthquake Intensity
-[.pdMat                 Subscript a pdMat Object
-Fatigue                 Cracks caused by metal fatigue
-Gasoline                Refinery yield of gasoline
-Glucose                 Glucose levels over time
-Glucose2                Glucose Levels Following Alcohol Ingestion
-Gun                     Methods for firing naval guns
-IGF                     Radioimmunoassay of IGF-I Protein
-Initialize              Initialize Object
-Initialize.corStruct    Initialize corStruct Object
-Initialize.glsStruct    Initialize a glsStruct Object
-Initialize.lmeStruct    Initialize an lmeStruct Object
-Initialize.reStruct     Initialize reStruct Object
-Initialize.varFunc      Initialize varFunc Object
-LDEsysMat               Generate system matrix for LDEs
-Machines                Productivity Scores for Machines and Workers
-MathAchSchool           School demographic data for MathAchieve
-MathAchieve             Mathematics achievement scores
-Matrix                  Assign Matrix Values
-Matrix.pdMat            Assign Matrix to a pdMat Object
-Matrix.reStruct         Assign reStruct Matrices
-Meat                    Tenderness of meat
-Milk                    Protein content of cows' milk
-Muscle                  Contraction of heart muscle sections
-Names                   Names Associated with an Object
-Names.formula           Extract Names from a formula
-Names.pdBlocked         Names of a pdBlocked Object
-Names.pdMat             Names of a pdMat Object
-Names.reStruct          Names of an reStruct Object
-Nitrendipene            Assay of nitrendipene
-Oats                    Split-plot Experiment on Varieties of Oats
-Orthodont               Growth curve data on an orthdontic measurement
-Ovary                   Counts of Ovarian Follicles
-Oxboys                  Heights of Boys in Oxford
-Oxide                   Variability in Semiconductor Manufacturing
-PBG                     Effect of Phenylbiguanide on Blood Pressure
-Phenobarb               Phenobarbitol Kinetics
-Pixel                   X-ray pixel intensities over time
-Quinidine               Quinidine Kinetics
-Rail                    Evaluation of Stress in Railway Rails
-RatPupWeight            The weight of rat pups
-Relaxin                 Assay for Relaxin
-Remifentanil            Pharmacokinetics of remifentanil
-Soybean                 Growth of soybean plants
-Spruce                  Growth of Spruce Trees
-Tetracycline1           Pharmacokinetics of tetracycline
-Tetracycline2           Pharmacokinetics of tetracycline
-VarCorr                 Extract variance and correlation components
-Variogram               Calculate Semi-variogram
-Variogram.corExp        Calculate Semi-variogram for a corExp Object
-Variogram.corGaus       Calculate Semi-variogram for a corGaus Object
-Variogram.corLin        Calculate Semi-variogram for a corLin Object
-Variogram.corRatio      Calculate Semi-variogram for a corRatio Object
-Variogram.corSpatial    Calculate Semi-variogram for a corSpatial
-                        Object
-Variogram.corSpher      Calculate Semi-variogram for a corSpher Object
-Variogram.default       Calculate Semi-variogram
-Variogram.gls           Calculate Semi-variogram for Residuals from a
-                        gls Object
-Variogram.lme           Calculate Semi-variogram for Residuals from an
-                        lme Object
-Wafer                   Modeling of Analog MOS Circuits
-Wheat                   Yields by growing conditions
-Wheat2                  Wheat Yield Trials
-allCoef                 Extract Coefficients from a Set of Objects
-anova.gls               Compare Likelihoods of Fitted Objects
-anova.lme               Compare Likelihoods of Fitted Objects
-as.matrix.corStruct     Matrix of a corStruct Object
-as.matrix.pdMat         Matrix of a pdMat Object
-as.matrix.reStruct      Matrices of an reStruct Object
-asOneFormula            Combine Formulas of a Set of Objects
-asTable                 Convert groupedData to a matrix
-augPred                 Augmented Predictions
-balancedGrouped         Create a groupedData object from a matrix
-bdf                     Language scores
-coef.corStruct          Coefficients of a corStruct Object
-coef.gnls               Extract gnls Coefficients
-coef.lmList             Extract lmList Coefficients
-coef.lme                Extract lme Coefficients
-coef.modelStruct        Extract modelStruct Object Coefficients
-coef.pdMat              pdMat Object Coefficients
-coef.reStruct           reStruct Object Coefficients
-coef.varFunc            varFunc Object Coefficients
-collapse                Collapse According to Groups
-collapse.groupedData    Collapse a groupedData Object
-compareFits             Compare Fitted Objects
-comparePred             Compare Predictions
-contr.SAS               Contrast Matrices
-corAR1                  AR(1) Correlation Structure
-corARMA                 ARMA(p,q) Correlation Structure
-corCAR1                 Continuous AR(1) Correlation Structure
-corClasses              Correlation Structure Classes
-corCompSymm             Compound Symmetry Correlation Structure
-corExp                  Exponential Correlation Structure
-corFactor               Factor of a Correlation Matrix
-corFactor.corStruct     Factor of a corStruct Object Matrix
-corGaus                 Gaussian Correlation Structure
-corLin                  Linear Correlation Structure
-corMatrix               Extract Correlation Matrix
-corMatrix.corStruct     Matrix of a corStruct Object
-corMatrix.pdMat         Extract Correlation Matrix from a pdMat Object
-corMatrix.reStruct      Extract Correlation Matrix from Components of
-                        an reStruct Object
-corNatural              General correlation in natural
-                        parameterization
-corRatio                Rational Quadratic Correlation Structure
-corSpatial              Spatial Correlation Structure
-corSpher                Spherical Correlation Structure
-corSymm                 General Correlation Structure
-ergoStool               Ergometrics experiment with stool types
-fdHess                  Finite difference Hessian
-fitted.glsStruct        Calculate glsStruct Fitted Values
-fitted.gnlsStruct       Calculate gnlsStruct Fitted Values
-fitted.lmList           Extract lmList Fitted Values
-fitted.lme              Extract lme Fitted Values
-fitted.lmeStruct        Calculate lmeStruct Fitted Values
-fitted.nlmeStruct       Calculate nlmeStruct Fitted Values
-fixed.effects           Extract Fixed Effects
-fixef.lmList            Extract lmList Fixed Effects
-formula.pdBlocked       Extract pdBlocked Formula
-formula.pdMat           Extract pdMat Formula
-formula.reStruct        Extract reStruct Object Formula
-gapply                  Apply a Function by Groups
-getCovariate            Extract Covariate from an Object
-getCovariate.corStruct
-                        Extract corStruct Object Covariate
-getCovariate.data.frame
-                        Extract Data Frame Covariate
-getCovariate.varFunc    Extract varFunc Covariate
-getCovariateFormula     Extract Covariates Formula
-getData                 Extract Data from an Object
-getData.gls             Extract gls Object Data
-getData.lmList          Extract lmList Object Data
-getData.lme             Extract lme Object Data
-getGroups               Extract Grouping Factors from an Object
-getGroups.corStruct     Extract corStruct Groups
-getGroups.data.frame    Extract Groups from a Data Frame
-getGroups.gls           Extract gls Object Groups
-getGroups.lmList        Extract lmList Object Groups
-getGroups.lme           Extract lme Object Groups
-getGroups.varFunc       Extract varFunc Groups
-getGroupsFormula        Extract Grouping Formula
-getResponse             Extract Response Variable from an Object
-getResponseFormula      Extract Formula Specifying Response Variable
-getVarCov               Extract variance-covariance matrix
-gls                     Fit Linear Model Using Generalized Least
-                        Squares
-glsControl              Control Values for gls Fit
-glsObject               Fitted gls Object
-glsStruct               Generalized Least Squares Structure
-gnls                    Fit Nonlinear Model Using Generalized Least
-                        Squares
-gnlsControl             Control Values for gnls Fit
-gnlsObject              Fitted gnls Object
-gnlsStruct              Generalized Nonlinear Least Squares Structure
-groupedData             Construct a groupedData Object
-gsummary                Summarize by Groups
-intervals               Confidence Intervals on Coefficients
-intervals.gls           Confidence Intervals on gls Parameters
-intervals.lmList        Confidence Intervals on lmList Coefficients
-intervals.lme           Confidence Intervals on lme Parameters
-isBalanced              Check a Design for Balance
-isInitialized           Check if Object is Initialized
-lmList                  List of lm Objects with a Common Model
-lmList.groupedData      lmList Fit from a groupedData Object
-lme                     Linear Mixed-Effects Models
-lme.groupedData         LME fit from groupedData Object
-lme.lmList              LME fit from lmList Object
-lmeControl              Control Values for lme Fit
-lmeObject               Fitted lme Object
-lmeScale                Scale for lme Optimization
-lmeStruct               Linear Mixed-Effects Structure
-logDet                  Extract the Logarithm of the Determinant
-logDet.corStruct        Extract corStruct Log-Determinant
-logDet.pdMat            Extract Log-Determinant from a pdMat Object
-logDet.reStruct         Extract reStruct Log-Determinants
-logLik.corStruct        Extract corStruct Log-Likelihood
-logLik.glsStruct        Log-Likelihood of a glsStruct Object
-logLik.gnls             Log-Likelihood of a gnls Object
-logLik.gnlsStruct       Log-Likelihood of a gnlsStruct Object
-logLik.lmList           Log-Likelihood of an lmList Object
-logLik.lme              Log-Likelihood of an lme Object
-logLik.lmeStruct        Log-Likelihood of an lmeStruct Object
-logLik.reStruct         Calculate reStruct Log-Likelihood
-logLik.varFunc          Extract varFunc logLik
-model.matrix.reStruct   reStruct Model Matrix
-needUpdate              Check if Update is Needed
-needUpdate.modelStruct
-                        Check if a modelStruct Object Needs Updating
-nlme                    Nonlinear Mixed-Effects Models
-nlme.nlsList            NLME fit from nlsList Object
-nlmeControl             Control Values for nlme Fit
-nlmeObject              Fitted nlme Object
-nlmeStruct              Nonlinear Mixed-Effects Structure
-nlsList                 List of nls Objects with a Common Model
-nlsList.selfStart       nlsList Fit from a selfStart Function
-pairs.compareFits       Pairs Plot of compareFits Object
-pairs.lmList            Pairs Plot of an lmList Object
-pairs.lme               Pairs Plot of an lme Object
-pdBlocked               Positive-Definite Block Diagonal Matrix
-pdClasses               Positive-Definite Matrix Classes
-pdCompSymm              Positive-Definite Matrix with Compound
-                        Symmetry Structure
-pdConstruct             Construct pdMat Objects
-pdConstruct.pdBlocked   Construct pdBlocked Objects
-pdDiag                  Diagonal Positive-Definite Matrix
-pdFactor                Square-Root Factor of a Positive-Definite
-                        Matrix
-pdFactor.reStruct       Extract Square-Root Factor from Components of
-                        an reStruct Object
-pdIdent                 Multiple of the Identity Positive-Definite
-                        Matrix
-pdLogChol               General Positive-Definite Matrix
-pdMat                   Positive-Definite Matrix
-pdMatrix                Extract Matrix or Square-Root Factor from a
-                        pdMat Object
-pdMatrix.reStruct       Extract Matrix or Square-Root Factor from
-                        Components of an reStruct Object
-pdNatural               General Positive-Definite Matrix in Natural
-                        Parametrization
-pdSymm                  General Positive-Definite Matrix
-phenoModel              Model function for the Phenobarb data
-plot.ACF                Plot an ACF Object
-plot.Variogram          Plot a Variogram Object
-plot.augPred            Plot an augPred Object
-plot.compareFits        Plot a compareFits Object
-plot.gls                Plot a gls Object
-plot.intervals.lmList   Plot lmList Confidence Intervals
-plot.lmList             Plot an lmList Object
-plot.lme                Plot an lme or nls object
-plot.nffGroupedData     Plot an nffGroupedData Object
-plot.nfnGroupedData     Plot an nfnGroupedData Object
-plot.nmGroupedData      Plot an nmGroupedData Object
-plot.ranef.lmList       Plot a ranef.lmList Object
-plot.ranef.lme          Plot a ranef.lme Object
-pooledSD                Extract Pooled Standard Deviation
-predict.gls             Predictions from a gls Object
-predict.gnls            Predictions from a gnls Object
-predict.lmList          Predictions from an lmList Object
-predict.lme             Predictions from an lme Object
-predict.nlme            Predictions from an nlme Object
-print.summary.pdMat     Print a summary.pdMat Object
-print.varFunc           Print a varFunc Object
-qqnorm.gls              Normal Plot of Residuals from a gls Object
-qqnorm.lme              Normal Plot of Residuals or Random Effects
-                        from an lme Object
-quinModel               Model function for the Quinidine data
-random.effects          Extract Random Effects
-ranef.lmList            Extract lmList Random Effects
-ranef.lme               Extract lme Random Effects
-reStruct                Random Effects Structure
-recalc                  Recalculate Condensed Linear Model Object
-recalc.corStruct        Recalculate for corStruct Object
-recalc.modelStruct      Recalculate for a modelStruct Object
-recalc.reStruct         Recalculate for an reStruct Object
-recalc.varFunc          Recalculate for varFunc Object
-residuals.gls           Extract gls Residuals
-residuals.glsStruct     Calculate glsStruct Residuals
-residuals.gnlsStruct    Calculate gnlsStruct Residuals
-residuals.lmList        Extract lmList Residuals
-residuals.lme           Extract lme Residuals
-residuals.lmeStruct     Calculate lmeStruct Residuals
-residuals.nlmeStruct    Calculate nlmeStruct Residuals
-simulate.lme            simulate lme models
-solve.pdMat             Calculate Inverse of a Positive-Definite
-                        Matrix
-solve.reStruct          Apply Solve to an reStruct Object
-splitFormula            Split a Formula
-summary.corStruct       Summarize a corStruct Object
-summary.gls             Summarize a gls Object
-summary.lmList          Summarize an lmList Object
-summary.lme             Summarize an lme Object
-summary.modelStruct     Summarize a modelStruct Object
-summary.nlsList         Summarize an nlsList Object
-summary.pdMat           Summarize a pdMat Object
-summary.varFunc         Summarize varFunc Object
-update.modelStruct      Update a modelStruct Object
-update.varFunc          Update varFunc Object
-varClasses              Variance Function Classes
-varComb                 Combination of Variance Functions
-varConstPower           Constant Plus Power Variance Function
-varExp                  Exponential Variance Function
-varFixed                Fixed Variance Function
-varFunc                 Variance Function Structure
-varIdent                Constant Variance Function
-varPower                Power Variance Function
-varWeights              Extract Variance Function Weights
-varWeights.glsStruct    Variance Weights for glsStruct Object
-varWeights.lmeStruct    Variance Weights for lmeStruct Object
